--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 16 21:16:02 GST 2016
-sdk.dir=C\:\\Users\\GIGABYTE\\AppData\\Local\\Android\\Sdk
+#Sat Nov 19 10:19:34 GST 2016
+sdk.dir=C\:\\Users\\Mina\\AppData\\Local\\Android\\Sdk
