--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 20 15:46:54 GST 2016
-sdk.dir=C\:\\Users\\Kareem\\AppData\\Local\\Android\\sdk
+#Mon Nov 21 17:34:16 GST 2016
+sdk.dir=C\:\\Users\\GIGABYTE\\AppData\\Local\\Android\\Sdk
