--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,39 +14,44 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activities.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        </activity>
-        <activity
-            android:name=".Activities.MacronutrientPreferenceActivity"
-            android:screenOrientation="portrait"
-            android:label="Preferences" />
-        <activity android:name=".Activities.AddNewMealActivity"
-            android:screenOrientation="portrait"
-            />
-      <!--  <activity android:name=".Activities.ViewSavedMealsActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".Activities.ViewSavedMealActivity"></activity>-->
-        <activity
             android:name=".Activities.Login"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Activities.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <activity
+            android:name=".Activities.MacronutrientPreferenceActivity"
+            android:label="Preferences"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.AddNewMealActivity"
+            android:screenOrientation="portrait" />
+        <!--
+        <activity android:name=".Activities.ViewSavedMealsActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity android:name=".Activities.ViewSavedMealActivity"></activity>
+        -->
+        <activity android:name=".Activities.ViewSavedMealsActivity" />
     </application>
 
 </manifest>
