Fixed alot of bugs Implemented DailyMeals Adapter in MainActivity Implemented ViewSavedMealsActivity Implemented ViewMeal Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         <activity android:name=".Activities.ViewSavedMealActivity"></activity>
         -->
         <activity android:name=".Activities.ViewSavedMealsActivity" />
+        <activity android:name=".Activities.ViewMealActivity" />
     </application>
 
 </manifest>
