--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Nov 23 16:23:51 GST 2016
-sdk.dir=C\:\\Users\\Kareem\\AppData\\Local\\Android\\sdk
+sdk.dir=C\:\\Users\\GIGABYTE\\AppData\\Local\\Android\\sdk
