--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
+    compile 'com.afollestad.material-dialogs:core:0.9.1.0'
+    compile 'com.androidadvance:topsnackbar:1.1.1'
 }
