--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,13 @@
             android:label="Macro Settings"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".Activities.ProfileSettings"></activity>
+        <activity android:name=".Activities.ProfileSettings">
+        </activity>
+
+        <activity android:name=".Activities.SelectSavedMealActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            />
     </application>
 
 </manifest>
