--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 03 17:47:02 GST 2016
-sdk.dir=C\:\\Users\\Kareem\\AppData\\Local\\Android\\sdk
+#Thu Dec 08 17:23:35 GST 2016
+sdk.dir=/home/mina/Android/Sdk
