--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,13 +65,17 @@
             android:label="Macro Settings"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".Activities.ProfileSettings">
-        </activity>
-
-        <activity android:name=".Activities.SelectSavedMealActivity"
+        <activity android:name=".Activities.ProfileSettings"></activity>
+        <activity
+            android:name=".Activities.SelectSavedMealActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
+        <activity android:name=".Activities.CreateComplex"
+            android:label="Add Complex Meal"
             android:windowSoftInputMode="adjustPan"
-            />
+            android:screenOrientation="portrait"
+        />
     </application>
 
 </manifest>
