--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,20 +58,18 @@
             android:name=".Activities.ViewMealActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Activities.AddSavedMealActivity"
-            android:screenOrientation="portrait" />
-        <activity
             android:name=".Activities.MacroSettings"
             android:label="Macro Settings"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".Activities.ProfileSettings">
-        </activity>
-
-        <activity android:name=".Activities.SelectSavedMealActivity"
+        <activity android:name=".Activities.ProfileSettings"></activity>
+        <activity
+            android:name=".Activities.SelectSavedMealActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"
-            />
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".Activities.AddSavedMealActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
