--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,8 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".Activities.ProfileSettings" />
-        <activity android:name=".Activities.UserProfile"></activity>
+        <activity android:name=".Activities.UserProfile" />
+        <activity android:name=".Activities.EditProfile"></activity>
     </application>
 
 </manifest>
