--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 11 21:15:08 GST 2017
-sdk.dir=C\:\\Users\\Yomna\\AppData\\Local\\Android\\Sdk
+#Thu Jan 12 18:13:53 AST 2017
+sdk.dir=C\:\\Users\\Kareem\\AppData\\Local\\Android\\sdk
