--- a/IIFYM_Tracker/build.gradle
+++ b/IIFYM_Tracker/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
     compile 'com.androidadvance:topsnackbar:1.1.1'
+    apply plugin: 'com.google.gms.google-services'
+    compile 'com.google.firebase:firebase-database:9.4.0'
+    compile 'com.google.firebase:firebase-auth:9.4.0'
     compile('com.github.worker8:tourguide:1.0.17-SNAPSHOT@aar') {
         transitive = true
     }
