--- a/IIFYM_Tracker/src/main/AndroidManifest.xml
+++ b/IIFYM_Tracker/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.kareem.IIFYM_Tracker.Activities.Login"
+            android:name="com.example.kareem.IIFYM_Tracker.Activities.User_Login_Authentification.Login_Abdu"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.kareem.IIFYM_Tracker.Activities.MainActivity"
+            android:name="com.example.kareem.IIFYM_Tracker.Activities.Main.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -39,11 +39,7 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name="com.example.kareem.IIFYM_Tracker.Activities.MacronutrientPreferenceActivity"
-            android:label="Preferences"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name="com.example.kareem.IIFYM_Tracker.Activities.AddQuickMealActivity"
+            android:name="com.example.kareem.IIFYM_Tracker.Activities.Main.AddQuickMealActivity"
             android:screenOrientation="portrait" />
         <!--
         <activity android:name=".Activities.ViewSavedMealsActivity"
@@ -52,39 +48,38 @@
         <activity android:name=".Activities.ViewSavedMealActivity"></activity>
         -->
         <activity
-            android:name="com.example.kareem.IIFYM_Tracker.Activities.ViewSavedMealsActivity"
+            android:name="com.example.kareem.IIFYM_Tracker.Activities.Main.ViewSavedMealsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.example.kareem.IIFYM_Tracker.Activities.ViewMealActivity"
+            android:name="com.example.kareem.IIFYM_Tracker.Activities.Main.ViewMealActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.example.kareem.IIFYM_Tracker.Activities.MacroSettings"
+            android:name="com.example.kareem.IIFYM_Tracker.Activities.Settings.MacroSettings"
             android:label="Macro Settings"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name="com.example.kareem.IIFYM_Tracker.Activities.ProfileSettings" />
-        <activity android:name="com.example.kareem.IIFYM_Tracker.Activities.UserProfile" />
-        <activity android:name="com.example.kareem.IIFYM_Tracker.Activities.EditProfile" />
+        <activity android:name="com.example.kareem.IIFYM_Tracker.Activities.User_Login_Authentification.UserProfile" />
+        <activity android:name="com.example.kareem.IIFYM_Tracker.Activities.Settings.EditProfile" />
         <activity
-            android:name="com.example.kareem.IIFYM_Tracker.Activities.SelectSavedMealActivity"
+            android:name="com.example.kareem.IIFYM_Tracker.Activities.Main.SelectSavedMealActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name="com.example.kareem.IIFYM_Tracker.Activities.CreateComplexMealActivity"
+            android:name="com.example.kareem.IIFYM_Tracker.Activities.Main.CreateComplexMealActivity"
             android:label="Add Complex Meal"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name="com.example.kareem.IIFYM_Tracker.Activities.AddSavedMealActivity"
+            android:name="com.example.kareem.IIFYM_Tracker.Activities.Main.AddSavedMealActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         >>>>>>> master
         <activity
-            android:name="com.example.kareem.IIFYM_Tracker.Activities.SelectMealTypeActivity"
+            android:name="com.example.kareem.IIFYM_Tracker.Activities.Main.SelectMealTypeActivity"
             android:label="@string/title_activity_select_meal_type"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.example.kareem.IIFYM_Tracker.Activities.CreateSimpleMealActivity"
+            android:name="com.example.kareem.IIFYM_Tracker.Activities.Main.CreateSimpleMealActivity"
             android:label="@string/title_activity_create_simple_meal"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
