--- a/IIFYM_Tracker/src/main/AndroidManifest.xml
+++ b/IIFYM_Tracker/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
             android:label="Macro Settings"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name="com.example.kareem.IIFYM_Tracker.Activities.User_Login_Authentification.UserProfile" />
+        <activity android:name="com.example.kareem.IIFYM_Tracker.Activities.User_Login_Authentification.UserProfile_Abdu" />
         <activity android:name="com.example.kareem.IIFYM_Tracker.Activities.Settings.EditProfile" />
         <activity
             android:name="com.example.kareem.IIFYM_Tracker.Activities.Main.SelectSavedMealActivity"
