--- a/IIFYM_Tracker/build.gradle
+++ b/IIFYM_Tracker/build.gradle
@@ -21,26 +21,28 @@ android {
 }
 repositories {
     mavenCentral()
-    maven(){
+    maven() {
         url "https://oss.sonatype.org/content/repositories/snapshots"
     }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.android.support:support-v4:25.0.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-    compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
-    compile 'com.afollestad.material-dialogs:core:0.9.1.0'
-    compile 'com.androidadvance:topsnackbar:1.1.1'
     apply plugin: 'com.google.gms.google-services'
-    compile 'com.google.firebase:firebase-database:9.4.0'
-    compile 'com.google.firebase:firebase-auth:9.4.0'
     compile('com.github.worker8:tourguide:1.0.17-SNAPSHOT@aar') {
         transitive = true
     }
     compile project(':ProgressBar_Library')
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
+    compile 'com.afollestad.material-dialogs:core:0.9.1.0'
+    compile 'com.androidadvance:topsnackbar:1.1.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
