--- a/IIFYM_Tracker/src/main/AndroidManifest.xml
+++ b/IIFYM_Tracker/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activities.User_Login_Authentification.Login_Abdu"
+            android:name=".Activities.Old_Login.Login_Abdu"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
@@ -58,7 +58,7 @@
             android:label="Macro Settings"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".Activities.User_Login_Authentification.UserProfile_Abdu" />
+        <activity android:name=".Activities.Old_Login.UserProfile_Abdu" />
         <activity android:name=".Activities.Settings.EditProfile" />
         <activity
             android:name=".Activities.Main.SelectSavedMealActivity"
