--- a/IIFYM_Tracker/src/main/AndroidManifest.xml
+++ b/IIFYM_Tracker/src/main/AndroidManifest.xml
@@ -58,8 +58,8 @@
             android:label="Macro Settings"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".Activities.Old_Login.UserProfile_Abdu" />
-        <activity android:name=".Activities.Settings.EditProfile" />
+        <activity android:name=".Activities.Settings.UserProfile_Mina" />
+        <activity android:name=".Activities.Settings.EditProfile_Mina" />
         <activity
             android:name=".Activities.Main.SelectSavedMealActivity"
             android:screenOrientation="portrait"
