--- a/IIFYM_Tracker/build.gradle
+++ b/IIFYM_Tracker/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.androidadvance:topsnackbar:1.1.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'info.hoang8f:android-segmented:1.0.6'
     testCompile 'junit:junit:4.12'
 }
 
