Finished implementing Firebase Login functionalities: I'm New Login Email Verification Registration
Fixed various bugs, including Firebase Auth not working on API 24 and above (gradle dependency issues)

--- a/IIFYM_Tracker/build.gradle
+++ b/IIFYM_Tracker/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '24.0.3'
+    buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId 'com.example.kareem.IIFYM_Tracker'
         minSdkVersion 23
@@ -28,7 +28,6 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    apply plugin: 'com.google.gms.google-services'
     compile('com.github.worker8:tourguide:1.0.17-SNAPSHOT@aar') {
         transitive = true
     }
@@ -40,9 +39,10 @@ dependencies {
     compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
     compile 'com.androidadvance:topsnackbar:1.1.1'
-    compile 'com.google.firebase:firebase-database:10.0.1'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'info.hoang8f:android-segmented:1.0.6'
+    compile 'com.google.firebase:firebase-auth:10.2.0'
+    compile 'com.google.firebase:firebase-database:10.2.0'
+    compile 'com.google.android.gms:play-services:10.2.0'
     testCompile 'junit:junit:4.12'
 }
 
