--- a/ProgressBar_Library/build.gradle
+++ b/ProgressBar_Library/build.gradle
@@ -2,15 +2,13 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '24.0.3'
-
+    buildToolsVersion '25.0.2'
     defaultConfig {
         minSdkVersion 23
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
-
     sourceSets {
         main {
             manifest.srcFile 'src/main/AndroidManifest.xml'
@@ -18,10 +16,12 @@ android {
             res.srcDirs = ['src/main/res']
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
 }
 
