--- a/IIFYM_Tracker/src/main/AndroidManifest.xml
+++ b/IIFYM_Tracker/src/main/AndroidManifest.xml
@@ -14,18 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activities.Main.activityMain"
+            android:name=".Activities.Main.New.activityMain"
             android:label="@string/appName"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Activities.Main.activityAddFood"
+            android:name=".Activities.Main.Old.activityAddFood"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Activities.Main.ViewSavedMealsActivity"
+            android:name=".Activities.Main.Old.ViewSavedMealsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Activities.Main.ViewMealActivity"
+            android:name=".Activities.Main.Old.ViewMealActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.Settings.MacroSettings"
@@ -35,16 +35,16 @@
         <activity android:name=".Activities.Settings.UserProfile_Mina" />
         <activity android:name=".Activities.Settings.EditProfile_Mina" />
         <activity
-            android:name=".Activities.Main.SelectSavedMealActivity"
+            android:name=".Activities.Main.Old.SelectSavedMealActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name=".Activities.Main.acitivityAddSavedItem"
+            android:name=".Activities.Main.Old.acitivityAddSavedItem"
             android:theme="@style/AppTheme.NoActionBar" />
         >>>>>>> master
         <activity
-            android:name=".Activities.Main.activityCreateFood"
+            android:name=".Activities.Main.Old.activityCreateFood"
             android:label="@string/title_activity_create_simple_meal"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Activities.User_Login_Authentification.activityLogin" />
@@ -57,7 +57,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.Main.activityAddDailyItem"></activity>
+        <activity android:name=".Activities.Main.New.activityAddDailyItem"></activity>
     </application>
 
 </manifest>
