--- a/IIFYM_Tracker/build.gradle
+++ b/IIFYM_Tracker/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:9.6.0'
     compile 'com.google.firebase:firebase-database:9.6.0'
     compile 'com.google.android.gms:play-services:9.6.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
     testCompile 'junit:junit:4.12'
 }
 
