--- a/IIFYM_Tracker/src/main/AndroidManifest.xml
+++ b/IIFYM_Tracker/src/main/AndroidManifest.xml
@@ -33,9 +33,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".Activities.Settings.UserProfile_Mina" />
-        <activity android:name=".Activities.Settings.EditProfile_Mina" /><![CDATA[
-        android:windowSoftInputMode="adjustPan" />
-        ]]>
+        <activity android:name=".Activities.Settings.EditProfile_Mina" />
         <activity
             android:name=".Activities.Main.Old.acitivityAddDailyItem"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -45,11 +43,12 @@
             android:label="@string/title_activity_create_simple_meal"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Activities.User_Login_Authentification.activityLogin"
-            android:label="@string/appName"/>
+            android:label="@string/appName" />
         <activity android:name=".Activities.User_Login_Authentification.activityUserInfo"
             android:label="Register Yourself!"/>
         <activity android:name=".Activities.User_Login_Authentification.activityUserMacros"
-            android:label="Set your Daily Nutritional Goals"/>
+            android:label="Set your Daily Nutritional Goals"
+            />
         <activity android:name=".Activities.User_Login_Authentification.activityLauncher"
             android:label="Hidden Launcher Activity">
             <intent-filter>
