--- a/IIFYM_Tracker/src/main/AndroidManifest.xml
+++ b/IIFYM_Tracker/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Activities.Main.New.activityCreateDailyFood"
-            android:screenOrientation="portrait" />
+            android:name=".Activities.Main.New.activityCreateDailyFood" />
         <activity
             android:name=".Activities.Main.Old.activityViewSavedItems"
             android:screenOrientation="portrait" />
@@ -33,24 +32,24 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".Activities.Settings.UserProfile_Mina" />
-        <activity android:name=".Activities.Settings.EditProfile_Mina" />
+        <activity android:name=".Activities.Settings.EditProfile_Mina" /><![CDATA[
+        android:windowSoftInputMode="adjustPan" />
+        ]]>
         <activity
             android:name=".Activities.Main.Old.acitivityAddDailyItem"
             android:theme="@style/AppTheme.NoActionBar" />
         >>>>>>> master
         <activity
             android:name=".Activities.Main.New.activityCreateFood"
-            android:label="@string/title_activity_create_simple_meal"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="Create new Food" />
         <activity android:name=".Activities.User_Login_Authentification.activityLogin"
-            android:label="@string/appName" />
+            android:label="@string/appName"/>
         <activity android:name=".Activities.User_Login_Authentification.activityUserInfo"
             android:label="Register Yourself!"/>
         <activity android:name=".Activities.User_Login_Authentification.activityUserMacros"
-            android:label="Set your Daily Nutritional Goals"
-            />
+            android:label="Set your Daily Nutritional Goals"/>
         <activity android:name=".Activities.User_Login_Authentification.activityLauncher"
-            android:label="Hidden Launcher Activity">
+            android:label="IIFYM Tracker">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
