--- a/IIFYM_Tracker/src/main/AndroidManifest.xml
+++ b/IIFYM_Tracker/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activities.Main.New.activityMain"
+            android:name=".Activities.Main.New.activityHome"
             android:label="@string/appName"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -30,9 +30,8 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".Activities.Settings.UserProfile_Mina" />
-        <activity android:name=".Activities.Settings.EditProfile_Mina" /><![CDATA[
+        <activity android:name=".Activities.Settings.EditProfile_Mina" />
         android:windowSoftInputMode="adjustPan" />
-        ]]>
         <activity
             android:name=".Activities.Main.Old.acitivityAddDailyItem"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -40,22 +39,28 @@
         <activity
             android:name=".Activities.Main.New.activityCreateFood"
             android:label="Create new Food" />
-        <activity android:name=".Activities.User_Login_Authentification.activityLogin"
-            android:label="@string/appName"/>
-        <activity android:name=".Activities.User_Login_Authentification.activityUserInfo"
-            android:label="Register Yourself!"/>
-        <activity android:name=".Activities.User_Login_Authentification.activityUserMacros"
-            android:label="Set your Daily Nutritional Goals"/>
-        <activity android:name=".Activities.User_Login_Authentification.activityLauncher"
+        <activity
+            android:name=".Activities.User_Login_Authentification.activityLogin"
+            android:label="@string/appName" />
+        <activity
+            android:name=".Activities.User_Login_Authentification.activityUserInfo"
+            android:label="Register Yourself!" />
+        <activity
+            android:name=".Activities.User_Login_Authentification.activityUserMacros"
+            android:label="Set your Daily Nutritional Goals" />
+        <activity
+            android:name=".Activities.User_Login_Authentification.activityLauncher"
             android:label="IIFYM Tracker">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.Main.New.activitySelectDailyItem"
-            android:label="Select an item to add"/>
-
+        <activity
+            android:name=".Activities.Main.New.activitySelectDailyItem"
+            android:label="Select an item to add" />
+        <activity android:name=".Activities.Main.New.activityViewDailyItem"></activity>
     </application>
 
 </manifest>
