--- a/IIFYM_Tracker/src/main/AndroidManifest.xml
+++ b/IIFYM_Tracker/src/main/AndroidManifest.xml
@@ -29,10 +29,9 @@
             android:name=".Activities.Settings.MacroSettings"
             android:label="Nutrition Settings"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".Activities.Settings.UserProfile_Mina" />
-        <activity android:name=".Activities.Settings.EditProfile_Mina" />
+            android:windowSoftInputMode="adjustPan" /><![CDATA[
         android:windowSoftInputMode="adjustPan" />
+        ]]>
         <activity
             android:name=".Activities.Main.Old.acitivityAddDailyItem"
             android:theme="@style/AppTheme.NoActionBar" />
