--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,35 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Example user template template
-### Example user template
+#built application files
+*.apk
+*.ap_
 
-# IntelliJ project files
-.idea
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
+.DS_Store
+
+# Eclipse project files
+.classpath
+.project
+
+# Android Studio
 *.iml
-/local.properties
-/.idea/workspace.xml
-out
-gen
-.gitignore
-.idea/shelf/
-/build
+.idea
 .gradle
-.idea/libraries
-.idea/modules.xml
+build/
+
+#NDK
+obj/
