--- a/IIFYM_Main/src/main/AndroidManifest.xml
+++ b/IIFYM_Main/src/main/AndroidManifest.xml
@@ -34,10 +34,10 @@
             android:name="com.example.kareem.IIFYM.Activities.UserLoginAuthentification.activityLogin"
             android:label="@string/appName" />
         <activity
-            android:name="com.example.kareem.IIFYM.Activities.UserLoginAuthentification.activityUserInfo"
+            android:name="com.example.kareem.IIFYM.Activities.UserLoginAuthentification.activityRegisterProfile"
             android:label="@string/toolbarUserInfo" />
         <activity
-            android:name="com.example.kareem.IIFYM.Activities.UserLoginAuthentification.activityUserMacros"
+            android:name="com.example.kareem.IIFYM.Activities.UserLoginAuthentification.activityRegisterGoals"
             android:label="@string/toolbarUserMacros" />
         <activity
             android:name="com.example.kareem.IIFYM.Activities.Main.activityAddDailyItem"
