--- a/IIFYM_Main/build.gradle
+++ b/IIFYM_Main/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile('com.github.worker8:tourguide:1.0.17-SNAPSHOT@aar') {
         transitive = true
     }
+    compile 'com.github.clans:fab:1.6.4'
     compile 'co.infinum:materialdatetimepicker-support:3.1.3'
     compile project(':ProgressBar_Library')
     compile 'com.android.support:appcompat-v7:25.1.0'
