--- a/IIFYM/src/main/AndroidManifest.xml
+++ b/IIFYM/src/main/AndroidManifest.xml
@@ -58,7 +58,10 @@
         <activity
             android:name=".Activities.Settings.activitySettings"
             android:theme="@style/settingsTheme" />
-        <activity android:name=".Activities.Main.activityCreateMeal"></activity>
+        <activity
+            android:name=".Activities.Main.activityCreateMeal"
+            android:label="@string/toolbarCreateNewMeal" />
+        <activity android:name=".Activities.Main.activtitySelectMealIngredients"></activity>
     </application>
 
 </manifest>
